--- a/public/styles.css
+++ b/public/styles.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 html {
   font-family: "Montserrat", sans-serif;
@@ -26,11 +26,14 @@ header h1 {
 }
 
 footer {
-   position: absolute;
+  position: absolute;
   text-align: center;
   bottom: 0;
-  width: 50%;
+  width: 100%;
   height: 2.5rem;
+  background: rgb(147, 125, 125);
+  /* justify-content: center; */
+  /* margin-right: 30%; */
 
 }
 
